k8s-cd-scripts/gitlab/postgresql.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: gitlab-postgresql
  namespace: devops
  labels:
    name: gitlab-postgresql
spec:
  template:
    metadata:
      name: gitlab-postgresql
      labels:
        name: gitlab-postgresql
    spec:
      containers:
      - name: postgresql
        image: sameersbn/postgresql:10
        imagePullPolicy: IfNotPresent
        ports:
        - name: postgres
          containerPort: 5432
        volumeMounts:
        - mountPath: /var/lib/postgresql
          name: data
        livenessProbe:
          exec:
            command:
            - pg_isready
            - -h
            - localhost
            - -U
            - postgres
          initialDelaySeconds: 30
          timeoutSeconds: 5
        readinessProbe:
          exec:
            command:
            - pg_isready
            - -h
            - localhost
            - -U
            - postgres
          initialDelaySeconds: 5
          timeoutSeconds: 1
      volumes:
      - name: data
        hostPath:
          path: /var/www/webapps/gitlab/postgresql

---
apiVersion: v1
kind: Service
metadata:
  name: gitlab-postgresql
  namespace: devops
  labels:
    name: gitlab-postgresql
spec:
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
  selector:
    name: gitlab-postgresql
