k8s-cd-scripts/gitlab/redis.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: gitlab-redis
  namespace: devops
  labels:
    name: gitlab-redis
spec:
  template:
    metadata:
      name: gitlib-redis
      labels:
        name: gitlab-redis
    spec:
      containers:
      - name: redis
        image: sameersbn/redis
        imagePullPolicy: IfNotPresent
        ports:
        - name: redis
          containerPort: 6379
        volumeMounts:
        - mountPath: /var/lib/redis
          name: data
        livenessProbe:
          exec:
            command:
            - redis-cli
            - ping
          initialDelaySeconds: 30
          timeoutSeconds: 5
        readinessProbe:
          exec:
            command:
            - redis-cli
            - ping
          initialDelaySeconds: 5
          timeoutSeconds: 1
      volumes:
      - name: data
        hostPath:
          path: /var/www/webapps/gitlab/redis

---
apiVersion: v1
kind: Service
metadata:
  name: gitlab-redis
  namespace: devops
  labels:
    name: gitlab-redis
spec:
  ports:
    - name: redis
      port: 6379
      targetPort: redis
  selector:
    name: gitlab-redis
