k8s-cd-scripts/gitlab/gitlab-ce.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: gitlab-ce
  namespace: devops
  labels:
    name: gitlab-ce
spec:
  template:
    metadata:
      name: gitlab-ce
      labels:
        name: gitlab-ce
    spec:
      containers:
      - name: gitlab-ce
        image: 172.16.52.129:5000/gitlab-ce:12.3.1-ce.0
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 80
        - name: ssh
          containerPort: 22
        - name: https
          containerPort: 443
        volumeMounts:
        - mountPath: /var/opt/gitlab
          name: data
        - mountPath: /var/log/gitlab
          name: log
        - mountPath: /etc/gitlab
          name: etc
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 180
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          timeoutSeconds: 1
      volumes:
      - name: data
        hostPath:
          path: /var/www/webapps/gitlab-ce/data
      - name: log
        hostPath:
          path: /var/www/webapps/gitlab-ce/log
      - name: etc
        hostPath:
          path: /var/www/webapps/gitlab-ce/etc
---
apiVersion: v1
kind: Service
metadata:
  name: gitlab-ce
  namespace: devops
  labels:
    name: gitlab-ce
spec:
  ports:
    - name: http
      port: 80
      nodePort: 30888
      targetPort: http
    - name: ssh
      port: 22
      targetPort: ssh
  type: NodePort
  selector:
    name: gitlab-ce

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gitlab-ce
  namespace: devops
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: gitlab-ce.k8s
    http:
      paths:
      - backend:
          serviceName: gitlab-ce
          servicePort: http
